test/golden96/{True}.16254223077612353942.golden
INITIALPATH:7:22: error: [GHC-39999]
    • No instance for ‘FormatAny2 (PyFClassify Bool) Bool AlignAll’ arising from a use of ‘formatAny’
    • In the first argument of ‘putStrLn’, namely ‘(formatAny Minus PaddingDefaultK Nothing (Nothing :: Maybe Int) True)’
      In the expression: putStrLn (formatAny Minus PaddingDefaultK Nothing (Nothing :: Maybe Int) True)
      In an equation for ‘main’: main = putStrLn (formatAny Minus PaddingDefaultK Nothing (Nothing :: Maybe Int) True)
  |
7 | main = putStrLn [fmt|{True}|]
  |                      ^^^^^^^^